--- a/Assignment1.html
+++ b/Assignment1.html
@@ -8,7 +8,7 @@
 </head>
 <main>
   <body style= "background-color: LightGray">
-    <h1 style="color: MediumSeaGreen;">Week 1 Assigment </h1>
+    <h1 style="color: MediumSeaGreen;">Week 1 Assignment </h1>
     <hr>
     <h2>As We May Think - Vannevar Bush, 1945</h2>
     <img width="702" height="226" src="Image1.jpg" > <br>
