--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <body style= "background-color: LightGray">
     <h1 style="color: MediumSeaGreen;">Spring 2022 - Roberto Montesdeoca - Web Dev</h1>
     <hr>
-    <h2>Sample Text</h2>
-    <b>Sample T4:</b><br>
-    Bottom Text
-    <a href="/MontesdeocaR/Assignment1.html">Assignment 1</a>
+    <h2>Weekly Homework</h2>
+    <b>Assignment 1:</b><br>
+    <a href="/MontesdeocaR/Assignment1.html">Link</a>
 </main>
 </html>
