--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 style="color: MediumSeaGreen;">Spring 2022 - Roberto Montesdeoca - Web Dev</h1>
     <hr>
     <h2>Assignments:</h2>
-    <a href="/MontesdeocaR/Assignment1/Assignment1.html">Assigment 1</a>
+    <a href="/MontesdeocaR/Assignment1/Assignment1.html">Assignment 1</a><br>
+    <a href="/MontesdeocaR/Assignment2/Assignment2.html">Assignment 2</a><br>
 </main>
 </html>
