--- a/Assignment1/Assignment1.html
+++ b/Assignment1/Assignment1.html
@@ -19,7 +19,7 @@
     <h3>Long Live The Web - Tim Berners-Lee, 2010</h3>
     <img width ="600" height="350"src="Image2.jpg" alt="">
     <br>
-    <b>Reflection:</b>br
+    <b>Reflection:</b><br>
     In "<i>Long Live the Web</i>", Tim Berners Lee discusses the ideologial principles behind the existence of the internet in the public domain and argues for the protection of the internet as an important pillar of modern day democracy. Berners-Lee's holds true today more than back in 2010. Since the publishing of the article, internet, and access to the internet, has become an even stronger double edged sword. In countries with freer internet access, it becomes a powerful tool for the protection of marginalized classes of people as well as a way to organize, show and fight for injustices. However, in countries with restricted or heavily monitored internet and internet access, black holes of internet access have been used to cover up atrocities, incite genocides, and propagate propaganda. And some countries can have a mix of both by giving people the illusion of online privacy yet monitoring their every move. Large steps must be taken to crack down on tech companies' control and increasing monopoly over the Web and all its different uses. In addition, the right to and protection of our online data must be put into law. Companies and the government should not be able to freely harvest our online data to monitor us, create pyschological profiles, or to sell us more products with targeted ads. Furthermore, in the interest of keeping the internet as free as possible, no aspects of the Web or the internet integral to survival in the modern day should be hidden behind paywalls or the forfiture of our personal data.
 </main>
 </html>
