--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>Assignments:</h2>
     <a href="/MontesdeocaR/Assignment1/Assignment1.html">Assignment 1</a><br>
     <a href="/MontesdeocaR/Assignment2/Assignment2.html">Assignment 2</a><br>
+    <a href="/MontesdeocaR/Assignment 3/Assignment 3.html">Assignment 3</a><br>
 </main>
 </html>
