--- a/Assignment 3/Assignment 3.html
+++ b/Assignment 3/Assignment 3.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <img  src="hat.webp" class="hat">
-  <img src="jersey.webp" class="jersey">
+  <img  src="Hat.webp" class="hat">
+  <img src="Jersey.webp" class="jersey">
 </head>
 <body>
     <div class="text-box">
