--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <a href="/MontesdeocaR/Assignment1/Assignment1.html">Assignment 1</a><br>
     <a href="/MontesdeocaR/Assignment2/Assignment2.html">Assignment 2</a><br>
     <a href="/MontesdeocaR/Assignment 3/Assignment 3.html">Assignment 3</a><br>
-    <a href="/MontesdeocaR/Web Final/index.html">Web Final</a><br>
+    <a href="/MontesdeocaR/Web Final/Web Final.html">Web Final</a><br>
 </main>
 </html>
